--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 title: A Page of Wild Ambitions and Dreams
+theme: minima
 author: Don Krasky
 email: dkrasky@gmail.com.com
 description: > # this means to ignore newlines until "baseurl:"
