--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: A Page of Wild Ambitions and Dreams
+title: Doing the Don, Daily
 theme: minima
 author: Don Krasky
 email: dkrasky@gmail.com.com
