--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ theme: minima
 author: Don Krasky
 email: dkrasky@gmail.com.com
 description: > # this means to ignore newlines until "baseurl:"
-  Hi, I'm Don Krasky; Surfer, Snowboarder, and Applied Mathematics Ph.D. These are my thoughts.
+  Hi, I'm Don Krasky; Surfer, Snowboarder, and Applied Mathematics Ph.D.
 
 # social links
 #twitter_username: your-twitter-handle # DO NOT include the @ character, or else the build will fail!
