--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Doing the Don, Daily
 theme: minima
 author: Don Krasky
-email: dkrasky@gmail.com.com
+email: dkrasky@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Hi, I'm Don Krasky; Surfer, Snowboarder, and Applied Mathematics Ph.D.
 
