--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
-title: Doing the Don, Daily
 theme: jekyll-theme-cayman
+title: Don Krasky's Personal Site
+description: Just Don, doing the Don.
 author: Don Krasky
 email: dkrasky@gmail.com
-description: > # this means to ignore newlines until "baseurl:"
-  Hi, I'm Don Krasky; Surfer, Snowboarder, and Applied Mathematics Ph.D.
+
 
 # social links
 #twitter_username: your-twitter-handle # DO NOT include the @ character, or else the build will fail!
